# emotionwise-python-wrapper

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/emotionwise/: __init__.py  client.py  errors.py
tests/: test_client.py
