[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "emotionwise-python"
version = "0.1.0"
description = "Python wrapper for the emotionwise.ai API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "EmotionWise" }
]
keywords = ["emotionwise", "emotion-detection", "api-wrapper"]
dependencies = [
  "httpx>=0.27.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/emotionwise"]

[tool.hatch.build.targets.sdist]
include = [
  "src/emotionwise",
  "tests",
  "README.md",
  "pyproject.toml",
]
